# os_colloc1

./: .gitignore  CMakeLists.txt  README.md
project/: main.cpp  tasks.hpp
test/: tests.cpp
